vector/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> declaracion
Rule 1     declaracion -> VECTOR CORCHETEIZQ TIPO CORCHETEDER ID PARENIZQ dimensiones PARENDER PUNTOYCOMA
Rule 2     declaracion -> VECTOR CORCHETEIZQ TIPO CORCHETEDER ID PARENIZQ dimensiones PARENDER IGUAL asignacion PUNTOYCOMA
Rule 3     dimensiones -> ENTERO
Rule 4     dimensiones -> dimensiones COMA ENTERO
Rule 5     elemento -> expresion
Rule 6     elemento -> lista_vectores
Rule 7     lista_expresiones -> elemento
Rule 8     lista_expresiones -> lista_expresiones COMA elemento
Rule 9     lista_expresiones -> <empty>
Rule 10    lista_vectores -> CORCHETEIZQ lista_expresiones CORCHETEDER
Rule 11    expresion -> ENTERO
Rule 12    expresion -> DECIMAL
Rule 13    asignacion -> lista_vectores
Rule 14    indices_vector -> CORCHETEIZQ expresion CORCHETEDER
Rule 15    indices_vector -> indices_vector CORCHETEIZQ expresion CORCHETEDER
Rule 16    expresion -> ID indices_vector

Terminals, with rules where they appear

COMA                 : 4 8
CORCHETEDER          : 1 2 10 14 15
CORCHETEIZQ          : 1 2 10 14 15
DECIMAL              : 12
ENTERO               : 3 4 11
ID                   : 1 2 16
IGUAL                : 2
PARENDER             : 1 2
PARENIZQ             : 1 2
PUNTOYCOMA           : 1 2
TIPO                 : 1 2
VECTOR               : 1 2
error                : 

Nonterminals, with rules where they appear

asignacion           : 2
declaracion          : 0
dimensiones          : 1 2 4
elemento             : 7 8
expresion            : 5 14 15
indices_vector       : 15 16
lista_expresiones    : 8 10
lista_vectores       : 6 13

Parsing method: LALR

state 0

    (0) S' -> . declaracion
    (1) declaracion -> . VECTOR CORCHETEIZQ TIPO CORCHETEDER ID PARENIZQ dimensiones PARENDER PUNTOYCOMA
    (2) declaracion -> . VECTOR CORCHETEIZQ TIPO CORCHETEDER ID PARENIZQ dimensiones PARENDER IGUAL asignacion PUNTOYCOMA

    VECTOR          shift and go to state 2

    declaracion                    shift and go to state 1

state 1

    (0) S' -> declaracion .



state 2

    (1) declaracion -> VECTOR . CORCHETEIZQ TIPO CORCHETEDER ID PARENIZQ dimensiones PARENDER PUNTOYCOMA
    (2) declaracion -> VECTOR . CORCHETEIZQ TIPO CORCHETEDER ID PARENIZQ dimensiones PARENDER IGUAL asignacion PUNTOYCOMA

    CORCHETEIZQ     shift and go to state 3


state 3

    (1) declaracion -> VECTOR CORCHETEIZQ . TIPO CORCHETEDER ID PARENIZQ dimensiones PARENDER PUNTOYCOMA
    (2) declaracion -> VECTOR CORCHETEIZQ . TIPO CORCHETEDER ID PARENIZQ dimensiones PARENDER IGUAL asignacion PUNTOYCOMA

    TIPO            shift and go to state 4


state 4

    (1) declaracion -> VECTOR CORCHETEIZQ TIPO . CORCHETEDER ID PARENIZQ dimensiones PARENDER PUNTOYCOMA
    (2) declaracion -> VECTOR CORCHETEIZQ TIPO . CORCHETEDER ID PARENIZQ dimensiones PARENDER IGUAL asignacion PUNTOYCOMA

    CORCHETEDER     shift and go to state 5


state 5

    (1) declaracion -> VECTOR CORCHETEIZQ TIPO CORCHETEDER . ID PARENIZQ dimensiones PARENDER PUNTOYCOMA
    (2) declaracion -> VECTOR CORCHETEIZQ TIPO CORCHETEDER . ID PARENIZQ dimensiones PARENDER IGUAL asignacion PUNTOYCOMA

    ID              shift and go to state 6


state 6

    (1) declaracion -> VECTOR CORCHETEIZQ TIPO CORCHETEDER ID . PARENIZQ dimensiones PARENDER PUNTOYCOMA
    (2) declaracion -> VECTOR CORCHETEIZQ TIPO CORCHETEDER ID . PARENIZQ dimensiones PARENDER IGUAL asignacion PUNTOYCOMA

    PARENIZQ        shift and go to state 7


state 7

    (1) declaracion -> VECTOR CORCHETEIZQ TIPO CORCHETEDER ID PARENIZQ . dimensiones PARENDER PUNTOYCOMA
    (2) declaracion -> VECTOR CORCHETEIZQ TIPO CORCHETEDER ID PARENIZQ . dimensiones PARENDER IGUAL asignacion PUNTOYCOMA
    (3) dimensiones -> . ENTERO
    (4) dimensiones -> . dimensiones COMA ENTERO

    ENTERO          shift and go to state 9

    dimensiones                    shift and go to state 8

state 8

    (1) declaracion -> VECTOR CORCHETEIZQ TIPO CORCHETEDER ID PARENIZQ dimensiones . PARENDER PUNTOYCOMA
    (2) declaracion -> VECTOR CORCHETEIZQ TIPO CORCHETEDER ID PARENIZQ dimensiones . PARENDER IGUAL asignacion PUNTOYCOMA
    (4) dimensiones -> dimensiones . COMA ENTERO

    PARENDER        shift and go to state 10
    COMA            shift and go to state 11


state 9

    (3) dimensiones -> ENTERO .

    PARENDER        reduce using rule 3 (dimensiones -> ENTERO .)
    COMA            reduce using rule 3 (dimensiones -> ENTERO .)


state 10

    (1) declaracion -> VECTOR CORCHETEIZQ TIPO CORCHETEDER ID PARENIZQ dimensiones PARENDER . PUNTOYCOMA
    (2) declaracion -> VECTOR CORCHETEIZQ TIPO CORCHETEDER ID PARENIZQ dimensiones PARENDER . IGUAL asignacion PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 12
    IGUAL           shift and go to state 13


state 11

    (4) dimensiones -> dimensiones COMA . ENTERO

    ENTERO          shift and go to state 14


state 12

    (1) declaracion -> VECTOR CORCHETEIZQ TIPO CORCHETEDER ID PARENIZQ dimensiones PARENDER PUNTOYCOMA .

    $end            reduce using rule 1 (declaracion -> VECTOR CORCHETEIZQ TIPO CORCHETEDER ID PARENIZQ dimensiones PARENDER PUNTOYCOMA .)


state 13

    (2) declaracion -> VECTOR CORCHETEIZQ TIPO CORCHETEDER ID PARENIZQ dimensiones PARENDER IGUAL . asignacion PUNTOYCOMA
    (13) asignacion -> . lista_vectores
    (10) lista_vectores -> . CORCHETEIZQ lista_expresiones CORCHETEDER

    CORCHETEIZQ     shift and go to state 15

    asignacion                     shift and go to state 16
    lista_vectores                 shift and go to state 17

state 14

    (4) dimensiones -> dimensiones COMA ENTERO .

    PARENDER        reduce using rule 4 (dimensiones -> dimensiones COMA ENTERO .)
    COMA            reduce using rule 4 (dimensiones -> dimensiones COMA ENTERO .)


state 15

    (10) lista_vectores -> CORCHETEIZQ . lista_expresiones CORCHETEDER
    (7) lista_expresiones -> . elemento
    (8) lista_expresiones -> . lista_expresiones COMA elemento
    (9) lista_expresiones -> .
    (5) elemento -> . expresion
    (6) elemento -> . lista_vectores
    (11) expresion -> . ENTERO
    (12) expresion -> . DECIMAL
    (16) expresion -> . ID indices_vector
    (10) lista_vectores -> . CORCHETEIZQ lista_expresiones CORCHETEDER

    CORCHETEDER     reduce using rule 9 (lista_expresiones -> .)
    COMA            reduce using rule 9 (lista_expresiones -> .)
    ENTERO          shift and go to state 22
    DECIMAL         shift and go to state 23
    ID              shift and go to state 24
    CORCHETEIZQ     shift and go to state 15

    lista_expresiones              shift and go to state 18
    elemento                       shift and go to state 19
    expresion                      shift and go to state 20
    lista_vectores                 shift and go to state 21

state 16

    (2) declaracion -> VECTOR CORCHETEIZQ TIPO CORCHETEDER ID PARENIZQ dimensiones PARENDER IGUAL asignacion . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 25


state 17

    (13) asignacion -> lista_vectores .

    PUNTOYCOMA      reduce using rule 13 (asignacion -> lista_vectores .)


state 18

    (10) lista_vectores -> CORCHETEIZQ lista_expresiones . CORCHETEDER
    (8) lista_expresiones -> lista_expresiones . COMA elemento

    CORCHETEDER     shift and go to state 26
    COMA            shift and go to state 27


state 19

    (7) lista_expresiones -> elemento .

    CORCHETEDER     reduce using rule 7 (lista_expresiones -> elemento .)
    COMA            reduce using rule 7 (lista_expresiones -> elemento .)


state 20

    (5) elemento -> expresion .

    CORCHETEDER     reduce using rule 5 (elemento -> expresion .)
    COMA            reduce using rule 5 (elemento -> expresion .)


state 21

    (6) elemento -> lista_vectores .

    CORCHETEDER     reduce using rule 6 (elemento -> lista_vectores .)
    COMA            reduce using rule 6 (elemento -> lista_vectores .)


state 22

    (11) expresion -> ENTERO .

    CORCHETEDER     reduce using rule 11 (expresion -> ENTERO .)
    COMA            reduce using rule 11 (expresion -> ENTERO .)


state 23

    (12) expresion -> DECIMAL .

    CORCHETEDER     reduce using rule 12 (expresion -> DECIMAL .)
    COMA            reduce using rule 12 (expresion -> DECIMAL .)


state 24

    (16) expresion -> ID . indices_vector
    (14) indices_vector -> . CORCHETEIZQ expresion CORCHETEDER
    (15) indices_vector -> . indices_vector CORCHETEIZQ expresion CORCHETEDER

    CORCHETEIZQ     shift and go to state 29

    indices_vector                 shift and go to state 28

state 25

    (2) declaracion -> VECTOR CORCHETEIZQ TIPO CORCHETEDER ID PARENIZQ dimensiones PARENDER IGUAL asignacion PUNTOYCOMA .

    $end            reduce using rule 2 (declaracion -> VECTOR CORCHETEIZQ TIPO CORCHETEDER ID PARENIZQ dimensiones PARENDER IGUAL asignacion PUNTOYCOMA .)


state 26

    (10) lista_vectores -> CORCHETEIZQ lista_expresiones CORCHETEDER .

    PUNTOYCOMA      reduce using rule 10 (lista_vectores -> CORCHETEIZQ lista_expresiones CORCHETEDER .)
    CORCHETEDER     reduce using rule 10 (lista_vectores -> CORCHETEIZQ lista_expresiones CORCHETEDER .)
    COMA            reduce using rule 10 (lista_vectores -> CORCHETEIZQ lista_expresiones CORCHETEDER .)


state 27

    (8) lista_expresiones -> lista_expresiones COMA . elemento
    (5) elemento -> . expresion
    (6) elemento -> . lista_vectores
    (11) expresion -> . ENTERO
    (12) expresion -> . DECIMAL
    (16) expresion -> . ID indices_vector
    (10) lista_vectores -> . CORCHETEIZQ lista_expresiones CORCHETEDER

    ENTERO          shift and go to state 22
    DECIMAL         shift and go to state 23
    ID              shift and go to state 24
    CORCHETEIZQ     shift and go to state 15

    elemento                       shift and go to state 30
    expresion                      shift and go to state 20
    lista_vectores                 shift and go to state 21

state 28

    (16) expresion -> ID indices_vector .
    (15) indices_vector -> indices_vector . CORCHETEIZQ expresion CORCHETEDER

    CORCHETEDER     reduce using rule 16 (expresion -> ID indices_vector .)
    COMA            reduce using rule 16 (expresion -> ID indices_vector .)
    CORCHETEIZQ     shift and go to state 31


state 29

    (14) indices_vector -> CORCHETEIZQ . expresion CORCHETEDER
    (11) expresion -> . ENTERO
    (12) expresion -> . DECIMAL
    (16) expresion -> . ID indices_vector

    ENTERO          shift and go to state 22
    DECIMAL         shift and go to state 23
    ID              shift and go to state 24

    expresion                      shift and go to state 32

state 30

    (8) lista_expresiones -> lista_expresiones COMA elemento .

    CORCHETEDER     reduce using rule 8 (lista_expresiones -> lista_expresiones COMA elemento .)
    COMA            reduce using rule 8 (lista_expresiones -> lista_expresiones COMA elemento .)


state 31

    (15) indices_vector -> indices_vector CORCHETEIZQ . expresion CORCHETEDER
    (11) expresion -> . ENTERO
    (12) expresion -> . DECIMAL
    (16) expresion -> . ID indices_vector

    ENTERO          shift and go to state 22
    DECIMAL         shift and go to state 23
    ID              shift and go to state 24

    expresion                      shift and go to state 33

state 32

    (14) indices_vector -> CORCHETEIZQ expresion . CORCHETEDER

    CORCHETEDER     shift and go to state 34


state 33

    (15) indices_vector -> indices_vector CORCHETEIZQ expresion . CORCHETEDER

    CORCHETEDER     shift and go to state 35


state 34

    (14) indices_vector -> CORCHETEIZQ expresion CORCHETEDER .

    CORCHETEIZQ     reduce using rule 14 (indices_vector -> CORCHETEIZQ expresion CORCHETEDER .)
    CORCHETEDER     reduce using rule 14 (indices_vector -> CORCHETEIZQ expresion CORCHETEDER .)
    COMA            reduce using rule 14 (indices_vector -> CORCHETEIZQ expresion CORCHETEDER .)


state 35

    (15) indices_vector -> indices_vector CORCHETEIZQ expresion CORCHETEDER .

    CORCHETEIZQ     reduce using rule 15 (indices_vector -> indices_vector CORCHETEIZQ expresion CORCHETEDER .)
    CORCHETEDER     reduce using rule 15 (indices_vector -> indices_vector CORCHETEIZQ expresion CORCHETEDER .)
    COMA            reduce using rule 15 (indices_vector -> indices_vector CORCHETEIZQ expresion CORCHETEDER .)

